--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,10 @@
+:root{
+  --main-color: rgb(0, 255, 128);
+  --bg-color: rgb(2, 30, 49);
+}
+
 body {
+  background-color: var(--bg-color);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -16,9 +22,23 @@ code {
 .txtbiger:hover {
   font-weight: 500;
 
-  color: rgb(0, 255, 128) !important;
+  color: var(--main-color) !important;
+}
+
+.txt-color{
+  color: var(--main-color);
 }
 
 .logo{
   font-size: 25px;
+
+}
+.logo:hover{
+  color: var(--main-color);
+}
+.logo:hover:active{
+  color: var(--main-color);
+}
+.poster-width{
+  width: 200px;
 }
