--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
 code {
@@ -25,7 +26,7 @@ code {
   color: var(--main-color) !important;
 }
 .txtbiger:focus {
-  text-decoration: underline;
+
   color: var(--main-color) !important;
   font-weight: 700;
 }
@@ -49,4 +50,8 @@ code {
 }
 .footer-bg{
   background-color: rgb(0, 127, 185);
+}
+.bt{
+  background-color: transparent !important;
+  color: #fff;
 }
