--- a/src/index.css
+++ b/src/index.css
@@ -53,5 +53,9 @@ code {
 }
 .bt{
   background-color: transparent !important;
-  color: #fff;
+  color: #ffffff;
 }
+.rate-bg{
+  background-color: var(--main-color);
+}
+
